test/kubernetes/e2e/features/watch_namespace_selector/testdata/match-expressions.yaml
settings:
  watchNamespaceSelectors:
  - matchExpressions:
    - key: watch
      operator: In
      values:
        - this
