test/kubernetes/e2e/features/watch_namespace_selector/testdata/random-ns-labeled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: random
  labels:
    watch: this
