test/kubernetes/e2e/features/watch_namespace_selector/testdata/upstream-random.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: postman-echo
  namespace: random
spec:
  static:
    hosts:
    - addr: postman-echo.com
      port: 80
