test/kubernetes/e2e/features/watch_namespace_selector/testdata/vs-random.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-random
  namespace: random
spec:
  virtualHost:
    domains:
    - 'random'
    routes:
      - matchers:
         - prefix: /
        directResponseAction:
          status: 200
          body: "Hello, world!"
