test/kubernetes/e2e/features/watch_namespace_selector/testdata/vs-upstream.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-upstream
spec:
  virtualHost:
    routes:
      - matchers:
         - prefix: /
        routeAction:
          single:
            upstream:
              name: postman-echo
              namespace: random
